--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,9 +15,9 @@
   <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
 
   {% if title %}
-  <title>Django Blog - {{ title }}</title>
+  <title>Caravan - {{ title }}</title>
   {% else %}
-  <title>Django Blog</title>
+  <title>Caravan</title>
   {% endif %}
 </head>
 
@@ -39,8 +39,7 @@
           <!-- Navbar Right Side -->
           <div class="navbar-nav">
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
-            <a class="nav-item nav-link" href="{% url 'product-create' %}">New Product</a>
+            <a class="nav-item nav-link" href="{% url 'post-create' %}">New Product</a>
             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
             <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
             {% else %}
@@ -69,7 +68,6 @@
           <h3>Our Sidebar</h3>
           <p class='text-muted'>You can put any information here you'd like.
             <ul class="list-group">
-              <li class="list-group-item list-group-item-light">Latest Posts</li>
               <li class="list-group-item list-group-item-light">Latest Products</li>
               <li class="list-group-item list-group-item-light">Announcements</li>
               <li class="list-group-item list-group-item-light">Calendars</li>
