--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 {% block content %}
-<!-- {% for post in posts %}
+{% for post in posts %}
 <article class="media content-section">
   <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
   <div class="media-body">
@@ -12,19 +12,7 @@
     <p class="article-content">{{ post.content }}</p>
   </div>
 </article>
-{% endfor %} -->
-
-{% for product in products %}
-<article class="media content-section">
-  <img class="rounded-circle article-img" src="{{ product.author.profile.image.url }}">
-  <div class="media-body">
-    <div class="article-metadata">
-      <a class="mr-2" href="#">{{ product.author }}</a>
-    </div>
-    <h2><a class="article-title" href="{% url 'product-detail' product.id %}">{{ product.title }}</a></h2>
-    <p class="article-content">{{ product.content }}</p>
-  </div>
-</article>
 {% endfor %}
+
 
 {% endblock content %}
